<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80B7BD"
    tools:context=".MainActivity2">

    <EditText
        android:id="@+id/volumelow"
        android:layout_width="284dp"
        android:layout_height="49dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="70dp"
        android:ems="10"
        android:hint="@string/volumeLow"
        android:inputType="textPersonName"
        android:textColor="#0C0C0C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/volumehight" />

    <EditText
        android:id="@+id/volumehight"
        android:layout_width="284dp"
        android:layout_height="49dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="70dp"
        android:ems="10"
        android:hint="@string/volumeHight"
        android:inputType="textPersonName"
        android:textColor="#0C0C0C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSave1"
        android:layout_width="133dp"
        android:layout_height="37dp"
        android:layout_marginStart="139dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="139dp"
        android:backgroundTint="#7CD688"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/volumelow" />
</androidx.constraintlayout.widget.ConstraintLayout>